--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@keyframes animheart {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -120,6 +128,11 @@ button {
 button:hover {
   background: linear-gradient(#fface8, #ae80e5);
   box-shadow: 5px 5px 4px #b8b7b7;
+}
+@media (min-width: 1200px) {
+  button {
+    padding: 15px 70px;
+  }
 }
 
 .functioning__title {
@@ -295,14 +308,6 @@ button:hover {
   animation: animheart 3s linear;
 }
 
-@keyframes animheart {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 100%;
-  }
-}
 footer {
   background: #444444;
   padding-bottom: 30px;
@@ -385,6 +390,11 @@ footer .fas {
   font-size: 1.5rem;
   margin: 20px 0 0 0;
 }
+@media (min-width: 1200px) {
+  .container-menu .title h2 {
+    padding-left: 25px;
+  }
+}
 .container-menu .title .fas {
   position: absolute;
   font-size: 1rem;
@@ -422,31 +432,7 @@ footer .fas {
   width: 40px;
   font-weight: normal;
 }
-.card__menu__item {
-  animation: slide 2.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-}
 
-.slide-delay1 {
-  animation-delay: 0.4s;
-}
-
-.slide-delay2 {
-  animation-delay: 0.8s;
-}
-
-@keyframes slide {
-  0% {
-    transform: translateY(1000px);
-    opacity: 0;
-  }
-  90% {
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
 .meal {
   background: #FFF;
   border-radius: 15px;
@@ -455,6 +441,7 @@ footer .fas {
   display: flex;
   cursor: pointer;
   box-shadow: 4px 4px 16px #b8b7b7;
+  animation: moveitems 800ms both ease-in-out;
 }
 .meal__info {
   padding: 10px;
@@ -490,6 +477,49 @@ footer .fas {
   font-weight: bold;
   padding-left: 10px;
   margin: 10px 0 0 0;
+}
+
+@keyframes moveitems {
+  0% {
+    transform: translateY(10px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+.meal__entree:nth-of-type(1) {
+  animation-delay: 0ms;
+}
+.meal__entree:nth-of-type(2) {
+  animation-delay: 200ms;
+}
+.meal__entree:nth-of-type(3) {
+  animation-delay: 400ms;
+}
+.meal__entree:nth-of-type(4) {
+  animation-delay: 600ms;
+}
+
+.meal__plat:nth-of-type(1) {
+  animation-delay: 200ms;
+}
+.meal__plat:nth-of-type(2) {
+  animation-delay: 400ms;
+}
+.meal__plat:nth-of-type(3) {
+  animation-delay: 600ms;
+}
+
+.meal__dessert:nth-of-type(1) {
+  animation-delay: 400ms;
+}
+.meal__dessert:nth-of-type(2) {
+  animation-delay: 600ms;
+}
+.meal__dessert:nth-of-type(3) {
+  animation-delay: 800ms;
 }
 
 .check {
