--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,18 +1,3 @@
-@mixin button {
-    background: linear-gradient($color-secondary, $color-primary);
-    border-radius: 25px;
-    padding: 15px 25px;
-    border: none;
-    font-size: 0.9rem;
-    margin: 20px;
-    color: #FFF;
-    box-shadow: 4px 4px 10px #b8b7b7;
-    cursor: pointer;
-    &:hover {
-        background: linear-gradient(lighten($color-secondary,10),lighten($color-primary, 10));
-        box-shadow: 5px 5px 4px #b8b7b7;
-    }
-    @include desktop {
-      padding: 15px 70px;
-    }
-  }
+button {
+  @include button
+}
