--- a/style.css
+++ b/style.css
@@ -74,6 +74,10 @@ a, footer .fas {
   }
 }
 @keyframes loader {
+  0% {
+    opacity: 1;
+    z-index: 1;
+  }
   80% {
     opacity: 1;
     z-index: 1;
