--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,7 +17,7 @@ a {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     background: hsl(0deg 0% 100% / 90%);
     animation: loader 2s both;
@@ -29,26 +29,17 @@ a {
         border-right: 8px solid $color-primary;
         border-left: 8px solid $color-secondary;
         animation: spin 1s linear infinite;
-      
     }
-
     &__spinner2{
         width: 30px;
         height: 30px;
         border-radius: 50%; 
         border-right: 6px solid $color-tertiary;
         border-left: 6px solid $color-tertiary;
-        animation: spin 1s linear infinite reverse; 
+        animation: spin 0.5s linear infinite reverse; 
     }
 }
-@keyframes spin {
-    0% { 
-        transform: rotate(0deg); 
-    }
-    100% { 
-        transform: rotate(360deg); 
-    }
-}
+
 @keyframes loader {
     0% {
         opacity: 1;
@@ -61,6 +52,14 @@ a {
     100% {
         opacity: 0;
         z-index: -2;
+    }
+}
+@keyframes spin {
+    0% { 
+        transform: rotate(0deg); 
+    }
+    100% { 
+        transform: rotate(360deg); 
     }
 }
 
