--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ a, footer .fas {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   background: rgba(255, 255, 255, 0.9);
   animation: loader 2s both;
@@ -62,17 +62,9 @@ a, footer .fas {
   border-radius: 50%;
   border-right: 6px solid #99E2D0;
   border-left: 6px solid #99E2D0;
-  animation: spin 1s linear infinite reverse;
+  animation: spin 0.5s linear infinite reverse;
 }
 
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
 @keyframes loader {
   0% {
     opacity: 1;
@@ -85,6 +77,14 @@ a, footer .fas {
   100% {
     opacity: 0;
     z-index: -2;
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 header {
